--- a/PhamTaManhLan_8888/Views/Shared/_Layout.cshtml
+++ b/PhamTaManhLan_8888/Views/Shared/_Layout.cshtml
@@ -53,6 +53,15 @@
                                         <li><a class="dropdown-item" href="#">Không có danh mục</a></li>
                                     }
                                 </ul>
+
+                                <!-- Hien lich su giao dich -->
+                                @if (User.Identity.IsAuthenticated)
+                                {
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-controller="ShoppingCart" asp-action="OrderHistory">Lịch sử giao dịch</a>
+                                </li>
+                                }
+
                             </li>
                         </ul>
 
