--- a/PhamTaManhLan_8888/Views/Home/Index.cshtml
+++ b/PhamTaManhLan_8888/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Home Page";
     int numOfQuantity = 1;
+    bool isLoggedIn = ViewBag.IsLoggedIn ?? false;
 }
 
 <section class="py-2">
@@ -32,7 +33,16 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     $(document).ready(function () {
+        const isLoggedIn = @isLoggedIn.ToString().ToLower(); 
+
         $(".add-to-cart").click(function () {
+            if (!isLoggedIn) {
+                
+                window.location.href = "/Identity/Account/Login";
+                return;
+            }
+
+            
             var productId = $(this).data("product-id");
             var quantity = $(this).data("quantity");
 
