--- a/PhamTaManhLan_8888/Views/Shared/_Layout.cshtml
+++ b/PhamTaManhLan_8888/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
         <header>
             <nav class="navbar navbar-expand-sm navbar-dark custom-navbar mb-3">
                 <div class="container-fluid">
-                    <a class="navbar-brand fw-bold" asp-area="" asp-controller="Home" asp-action="Index">PhamTaManhLan_8888</a>
+                    <a class="navbar-brand fw-bold" asp-area="" asp-controller="Home" asp-action="Index">Bakery Shop</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
