--- a/PhamTaManhLan_8888/Views/Product/Index.cshtml
+++ b/PhamTaManhLan_8888/Views/Product/Index.cshtml
@@ -1,11 +1,18 @@
-﻿<div class="d-flex justify-content-between align-items-center mb-3">
+﻿@model IEnumerable<PhamTaManhLan_8888.Models.Product>
+
+<div class="d-flex justify-content-between align-items-center mb-3">
     <h2 class="product-title">Danh sách sản phẩm</h2>
     <a href="@Url.Action("Add", "Product")" class="btn btn-success">
         <i class="fas fa-plus"></i> Thêm sản phẩm
     </a>
 </div>
 
-
+@if (!string.IsNullOrEmpty(ViewBag.ErrorMessage))
+{
+    <div class="alert alert-danger">
+        @ViewBag.ErrorMessage
+    </div>
+}
 
 <table class="table table-striped table-hover table-bordered shadow-sm">
     <thead class="table-dark">
