--- a/PhamTaManhLan_8888/Views/Shared/_Layout.cshtml
+++ b/PhamTaManhLan_8888/Views/Shared/_Layout.cshtml
@@ -45,7 +45,16 @@
                                     {
                                         @foreach (var category in ViewBag.Categories)
                                         {
-                                            <li><a class="dropdown-item" asp-controller="Product" asp-action="Index" asp-route-searchTerm="@category.Text">@category.Text</a></li>
+                                            <li>
+                                                @if (User.IsInRole("Admin") || User.IsInRole("Employee"))
+                                                {
+                                                    <a class="dropdown-item" asp-controller="Product" asp-action="Index" asp-route-category="@category.Text">@category.Text</a>
+                                                }
+                                                else
+                                                {
+                                                    <a class="dropdown-item" asp-controller="Home" asp-action="Index" asp-route-category="@category.Text">@category.Text</a>
+                                                }
+                                            </li>
                                         }
                                     }
                                     else
@@ -56,7 +65,7 @@
                             </li>
                         </ul>
 
-                        <form class="d-flex" asp-controller="Product" asp-action="Index" method="get">
+                        <form class="d-flex" asp-controller="@(User.IsInRole("Admin") || User.IsInRole("Employee") ? "Product" : "Home")" asp-action="Index" method="get">
                             <input class="form-control me-2" type="search" placeholder="Tìm kiếm sản phẩm" aria-label="Search" name="searchTerm">
                             <button class="btn btn-outline-light" type="submit">Tìm</button>
                         </form>
