fix header và fix phân quyền

--- a/PhamTaManhLan_8888/Views/Product/Index.cshtml
+++ b/PhamTaManhLan_8888/Views/Product/Index.cshtml
@@ -3,7 +3,7 @@
 
 @{
     // Kiểm tra nếu người dùng KHÔNG phải Admin
-    if (!User.IsInRole("Admin"))
+    if (!(User.IsInRole("Admin") || User.IsInRole("Employee")))
     {
                 <div class="alert alert-danger mt-4">
                     <strong>⛔ Bạn không có quyền truy cập vào trang này.</strong>
