--- a/PhamTaManhLan_8888/Views/Product/Index.cshtml
+++ b/PhamTaManhLan_8888/Views/Product/Index.cshtml
@@ -6,7 +6,7 @@
     if (!(User.IsInRole("Admin") || User.IsInRole("Employee")))
     {
                 <div class="alert alert-danger mt-4">
-                    <strong>⛔ Bạn không có quyền truy cập vào trang này.</strong>
+                    <strong>⛔ Bạn không có quyền truy cập vào trang này!!!</strong>
                 </div>
         return; // Dừng hiển thị nội dung bên dưới
     }
