xóa nút delete trong danh mục,cập nhât đơn vị tiền

--- a/PhamTaManhLan_8888/Areas/Admin/Views/Order/Index.cshtml
+++ b/PhamTaManhLan_8888/Areas/Admin/Views/Order/Index.cshtml
@@ -50,7 +50,8 @@
                         <td>@order.Id</td>
                         <td>@order.ApplicationUser.FullName (@order.ApplicationUser.Email)</td>
                         <td>@order.OrderDate.ToString("dd/MM/yyyy")</td>
-                        <td>@order.TotalPrice.ToString("C")</td>
+                        <td>@string.Format(new System.Globalization.CultureInfo("vi-VN"), "{0:C0}", order.TotalPrice)
+
                         <td>
                             <ul class="list-unstyled mb-0">
                             @foreach (var item in order.OrderDetails)
